horus_manager/src/monitor_tui/snapshots/horus_manager__monitor_tui__tests__snapshot_topics_mixed_active_idle.snap
---
source: horus_manager/src/monitor_tui/tests.rs
expression: render_to_string_normalized(&buffer)
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  HORUS TUI v0.1.9 | LIVE | Nodes: 0 | Topics: 2  │
│ Overview  |  Nodes  |  Topics  |  TransformFrame  |  Packages  |  Params  |  Recordings  │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Topics - Use  to select, Enter to view logs───────────────────────────────────────────────────────────────────────────┐
│ Topic  Type  Hz  Publishers  Subscribers  │
│ active_fast  LaserScan  1000.0  a, b, c  d, e, f, g, h  │
│ idle_zero  Empty  0.0  -  -  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
  [ENTER] View Logs | [↑↓] Navigate | [TAB] Switch Tab | [P] Pause | [?] Help | [Q] Quit
