horus_manager/src/monitor_tui/snapshots/horus_manager__monitor_tui__tests__snapshot_topics_populated.snap
---
source: horus_manager/src/monitor_tui/tests.rs
expression: render_to_string_normalized(&buffer)
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  HORUS TUI v0.1.9 | LIVE | Nodes: 5 | Topics: 4  │
│ Overview  |  Nodes  |  Topics  |  TransformFrame  |  Packages  |  Params  |  Recordings  │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Topics - Use  to select, Enter to view logs───────────────────────────────────────────────────────────────────────────┐
│ Topic  Type  Hz  Publishers  Subscribers  │
│ scan  LaserScan  40.0  lidar_driver  planner, safety_monitor  │
│ cmd_vel  CmdVel  100.0  planner  motor_controller, safety_monitor│
│ odom  Odometry  50.0  motor_controller  planner, safety_monitor  │
│ image  Image  0.0  camera_node  -  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
  [ENTER] View Logs | [↑↓] Navigate | [TAB] Switch Tab | [P] Pause | [?] Help | [Q] Quit
