horus_manager/src/monitor_tui/snapshots/horus_manager__monitor_tui__tests__snapshot_topics_small_terminal.snap
---
source: horus_manager/src/monitor_tui/tests.rs
expression: render_to_string(&buffer)
---
┌──────────────────────────────────────────────────────────────────────────────┐
│                HORUS TUI v0.1.9 | LIVE | Nodes: 5 | Topics: 4                │
│ Overview  |  Nodes  |  Topics  |  TransformFrame  |  Packages  |  Params  |  │
└──────────────────────────────────────────────────────────────────────────────┘
┌Topics - Use  to select, Enter to view logs───────────────────────────────────┐
│ Topic           Type             Hz       Publishers        Subscribers      │
│ scan            LaserScan        40.0     lidar_driver      planner, safety_m│
│ cmd_vel         CmdVel           100.0    planner           motor_controller,│
│ odom            Odometry         50.0     motor_controller  planner, safety_m│
│ image           Image            0.0      camera_node       -                │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
[ENTER] View Logs | [↑↓] Navigate | [TAB] Switch Tab | [P] Pause | [?] Help | [Q
