horus_manager/src/monitor_tui/snapshots/horus_manager__monitor_tui__tests__snapshot_transform_frame_small_terminal.snap
---
source: horus_manager/src/monitor_tui/tests.rs
expression: render_to_string(&buffer)
---
┌──────────────────────────────────────────────────────────────────────────────┐
│                HORUS TUI v0.1.9 | LIVE | Nodes: 0 | Topics: 0                │
│ Overview  |  Nodes  |  Topics  |  TransformFrame  |  Packages  |  Params  |  │
└──────────────────────────────────────────────────────────────────────────────┘
┌TransformFrame - Coordinate Transforms────────────────────────────────────────┐
│Status: No active transforms                                                  │
│                                                                              │
│Tip: Start a HORUS application with TransformFrame publishing enabled         │
│     Use sim3d or add TransformFramePublisher to your nodes                   │
│                                                                              │
│CLI: horus tf list | horus tf tree | horus tf echo <src> <dst>                │
└──────────────────────────────────────────────────────────────────────────────┘
┌Frame Tree (Live)─────────────────────────────────────────────────────────────┐
│Frame Tree:                                                                   │
│                                                                              │
│  (No frames available)                                                       │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
       [TAB] Switch Tab | [↑↓] Navigate | [P] Pause | [?] Help | [Q] Quit
